--- a/rom/mem.cfg
+++ b/rom/mem.cfg
@@ -1,8 +1,23 @@
+# Address Map:
+# ZERO:  $0000 - $00FF  (256 addresses)
+# STACK: $0100 - $01FF  (256 addresses)
+# IO:    $0200 - $02FF  (256 addresses)
+# RAM:   $0300 - $7FFF  (32,000 addresses)
+# ROM:   $8000 - $FFF9  (32,762 addresses)
+# VEC:   $FFFA - $FFFF  (6 addresses)
+
 MEMORY {
-    RAM: start = $0000, size = $4000, type=rw;
+    ZERO: start = $0000, size = $0100, type=rw;
+    STACK: start = $0100, size = $0100, type=rw;
+    IO: start = $0200, size = $0100, type=rw;
+    RAM: start = $0300, size = $7D00, type=rw;
     ROM: start = $8000, size = $7FFA, type=ro, fill=yes;
     VEC: start = $FFFA, size = 6, type=ro, fill=yes;
 }
+
+# The only parts of the map required to build the rom 
+# are the ROM and VEC, the other parts above are just
+# for reference 
 
 SEGMENTS {
     ROM: load = "ROM", type=ro; 
