--- a/rom/mem.cfg
+++ b/rom/mem.cfg
@@ -1,5 +1,14 @@
+# $0000 - $00FF - Zero Page 
+# $0100 - $01FF - Stack 
+# $0200 - $7FFF - Ram 
+# $8000 - $800F - IO 
+# $8080 - $8082 - Serial 
+# $8100 - $FFF9 - ROM 
+# $FFFA - $FFFF - Vectors
+
 MEMORY {
-    ROM: start = $8000, size = $7FFA, type=ro, fill=yes;
+    IO: start = $8000, size= $100, type=ro, fill=yes; 
+    ROM: start = $8100, size = $7EFA, type=ro, fill=yes;
     VEC: start = $FFFA, size = 6, type=ro, fill=yes;
 }
 
