--- a/rom/mem.cfg
+++ b/rom/mem.cfg
@@ -2,7 +2,8 @@
 # $0100 - $01FF - Stack 
 # $0200 - $7FFF - Ram 
 # $8000 - $800F - IO 
-# $8080 - $8082 - Serial 
+# $8010 - $8013 - Serial 
+# $8014 - $80FF - Unused
 # $8100 - $FFF9 - ROM 
 # $FFFA - $FFFF - Vectors
 
