update memory map for flash storage

--- a/rom/mem.cfg
+++ b/rom/mem.cfg
@@ -1,16 +1,14 @@
-# $0000 - $00FF - Zero Page 
-# $0100 - $01FF - Stack 
-# $0200 - $7FFF - Ram 
-# $8000 - $800F - IO 
-# $8010 - $8013 - Serial 
-# $8014 - $80FF - Unused
-# $8100 - $FFF9 - ROM 
-# $FFFA - $FFFF - Vectors
-
 MEMORY {
-    IO: start = $8000, size= $100, type=ro, fill=yes; 
-    ROM: start = $8100, size = $7EFA, type=ro, fill=yes;
-    VEC: start = $FFFA, size = 6, type=ro, fill=yes;
+    Z_PAGE:   start = $0000, size = $0100, type = rw;           # Zero page
+    STACK:    start = $0100, size = $0100, type = rw;           # Stack
+    RAM:      start = $0200, size = $7E00, type = rw;           # Main Ram
+    IO:       start = $8000, size = $0010, type = ro, fill=yes; # 65C22 Controller
+    FL_CTRL:  start = $8010, size = $0010, type = ro, fill=yes; # 65C22 Controller
+    SERIAL:   start = $8020, size = $0004, type = ro, fill=yes; # 65C51 Controller
+    UNUSED:   start = $8025, size = 92,    type = ro, fill=yes;
+    FLASH:    start = $8080, size = $0080, type = ro, fill=yes; # SST39SF020A Flash
+    ROM:      start = $8100, size = $7EFA, type = ro, fill=yes; # ROM
+    VEC:      start = $FFFA, size = 6,     type = ro, fill=yes; # CPU Vectors
 }
 
 SEGMENTS {
