--- a/rom/mem.cfg
+++ b/rom/mem.cfg
@@ -1,4 +1,5 @@
 MEMORY {
+    RAM:      start = $0000, size = $7FFF, type = rw;
     IO:       start = $8000, size = $0100, type = ro, fill=yes; 
     ROM:      start = $8100, size = $7EFA, type = ro, fill=yes;
     VEC:      start = $FFFA, size = 6,     type = ro, fill=yes;
