--- a/rom/mem.cfg
+++ b/rom/mem.cfg
@@ -1,11 +1,13 @@
 MEMORY {
-    RAM:      start = $0000, size = $7FFF, type = rw;
-    IO:       start = $8000, size = $0100, type = ro, fill=yes; 
-    ROM:      start = $8100, size = $7EFA, type = ro, fill=yes;
-    VEC:      start = $FFFA, size = 6,     type = ro, fill=yes;
+    ram:      start = $0000, size = $7FFF,  type = rw;
+    io:       start = $8000, size = $0100,  type = ro, fill=yes; 
+    rom:      start = $8100, size = $7E00,  type = ro, fill=yes;
+    woz:      start = $FF00, size = $FA,    type = ro, fill=yes;
+    vec:      start = $FFFA, size = 6,      type = ro, fill=yes;
 }
 
 SEGMENTS {
-    ROM: load = "ROM", type=ro; 
-    VEC: load = "VEC", type=ro;
+    rom: load = "rom", type=ro; 
+    woz: load = "woz", type=ro;
+    vec: load = "vec", type=ro;
 }
