--- a/rom/mem.cfg
+++ b/rom/mem.cfg
@@ -1,13 +1,15 @@
 MEMORY {
     ram:      start = $0000, size = $7FFF,  type = rw;
     io:       start = $8000, size = $0100,  type = ro, fill=yes; 
-    rom:      start = $8100, size = $7E00,  type = ro, fill=yes;
+    bios:     start = $8100, size = $0400,  type = ro, fill=yes;
+    rom:      start = $8500, size = $7A00,  type = ro, fill=yes;
     woz:      start = $FF00, size = $FA,    type = ro, fill=yes;
     vec:      start = $FFFA, size = 6,      type = ro, fill=yes;
 }
 
 SEGMENTS {
     rom: load = "rom", type=ro; 
+    bios: load = "bios", type=ro;
     woz: load = "woz", type=ro;
     vec: load = "vec", type=ro;
 }
