--- a/rom/mem.cfg
+++ b/rom/mem.cfg
@@ -1,10 +1,10 @@
 MEMORY {
     ram:      start = $0000, size = $7FFF,  type = rw;
-    io:       start = $8000, size = $0100,  type = ro, fill=yes; 
-    bios:     start = $8100, size = $0400,  type = ro, fill=yes;
-    rom:      start = $8500, size = $7A00,  type = ro, fill=yes;
-    woz:      start = $FF00, size = $FA,    type = ro, fill=yes;
-    vec:      start = $FFFA, size = 6,      type = ro, fill=yes;
+    io:       start = $8000, size = $0100,  type = ro, fill=yes;
+    rom:      start = $8100, size = $7DB0,  type = ro, fill=yes;  
+    bios:     start = $FEB0, size = $50,    type = ro, fill=yes; # 2 bytes free
+    woz:      start = $FF00, size = $FA,    type = ro, fill=yes; # 9 bytes free
+    vec:      start = $FFFA, size = 6,      type = ro, fill=yes; # 0 bytes free
 }
 
 SEGMENTS {
