--- a/rom/mem.cfg
+++ b/rom/mem.cfg
@@ -1,8 +1,8 @@
 MEMORY {
     ram:      start = $0000, size = $7FFF,  type = rw;
     io:       start = $8000, size = $0100,  type = ro, fill=yes;
-    rom:      start = $8100, size = $7DB0,  type = ro, fill=yes;  
-    bios:     start = $FEB0, size = $50,    type = ro, fill=yes; # 2 bytes free
+    rom:      start = $8100, size = $7DA0,  type = ro, fill=yes;  
+    bios:     start = $FEA0, size = $60,    type = ro, fill=yes; # 2 bytes free
     woz:      start = $FF00, size = $FA,    type = ro, fill=yes; # 9 bytes free
     vec:      start = $FFFA, size = 6,      type = ro, fill=yes; # 0 bytes free
 }
