Document new memory allocation in mem.cfg
Added new memory allocation details for various memory regions.

TODO

--- a/rom/mem.cfg
+++ b/rom/mem.cfg
@@ -13,3 +13,21 @@ SEGMENTS {
     woz: load = "woz", type=ro;
     vec: load = "vec", type=ro;
 }
+
+
+# New memory allocation 
+#
+# RAM 0000-6FFF   28,672b 
+# FLASH 7000 - 7FFF 4096b  #1000 
+# IO1 8000 - 803F 64b #40
+# IO2 8040 - 807F 64b #40
+# UART 8080 - 80BF 64 b #40
+# UNUSED 80C0 - 80FF 64b #40
+# FLASH PAGING 8100 - 81FF 256b #FF
+# NV PAGING 8200 - 82FF 256b #FF
+# NV RAM 8300 - 83FF 256b #FF
+# ROM 8400 - FFFF 31744b #7C00
+#
+#
+#
+#
