Update memory allocation comments in mem.cfg

--- a/rom/mem.cfg
+++ b/rom/mem.cfg
@@ -17,7 +17,7 @@ SEGMENTS {
 
 # New memory allocation 
 #
-# RAM 0000-6FFF   28,672b 
+# RAM 0000-6FFF   28,672b #7000
 # FLASH 7000 - 7FFF 4096b  #1000 
 # IO1 8000 - 803F 64b #40
 # IO2 8040 - 807F 64b #40
